# Project

./: CMakeLists.txt  README.md  definitions.h  exceptions.h  fdlist.h  main-test.cpp  main.cpp  some shit.h  time.h  utils.cpp  utils.h
algorithms/: lexer.cpp  lexer.h  parsing.cpp  parsing.h  shunting_yard_algorithm.cpp  shunting_yard_algorithm.h
better-command/: command.h  commands.h  regularParser.cpp  regularParser.h  server_commands.cpp  simple_commands.cpp
command/: command.h  command_expression.h  complicate_commands.h  server_command.cpp  server_command.h  simple_commands.h
creators/: command_creator.h  command_creators.cpp  create_creators_map.h
exp/: command_expression.h  exp.h  expression_map.h  expression_types.h
vars/: data_reader_server.cpp  data_reader_server.h  data_server.cpp  data_server.h  stable.cpp  stable.h
